# Chactivity-public

./: .gitignore  Dockerfile  README.md  cli.py  config.toml  pyproject.toml  requirements.txt
.github/workflows/: ci-school.yml  docker.yml
Chactivity-paper-master/: .gitignore  chinesedraft.sty  main.tex
Chactivity-paper-master/bibliography/: epit.bib  refs.bib
app/core/: custom_typing.py
app/prompts/: after_test_generate_activity_description.jinja  before_test_ask_to_guess_goal.jinja  before_test_find_a_good_start.jinja  before_test_think_a_idea.jinja  every_status_ask_to_describe_status.jinja  every_step_get_action.jinja  every_step_history.jinja  every_step_insert_idea.jinja  fixed_system.jinja
assets/dev_scripts/: launch-google-emulator.bat  run-debug-local-eval.cmd  run-debug-local.cmd  run-debug.ps1  scp-profiler.bat
assets/monkey_logs/: monkey_log.txt  monkey_result.json
assets/page_source/: abs_login_page.xml  appium_page_source.xml  key_elements_in_school_planner.xml  (+1 more)
docs/: commit_message.md
tools/: analyze_apk.py  analyze_monkey_result.py  clip_to_testfile.py  do_monkeys.py  get_key_elements_of_current_view.py  get_monkey_not_covered.ipynb  llm_test.py  migrate_test_input_to_latest.py  summary2zulip.py
unittest/: ci.bat  ci_abs.json  ci_abs_fake_account_settings.json  ci_astro_crash.json  ci_schoolplanner.json  ci_schoolplanner_nohint.json  ci_writeily.json  empty.json  eval.bat  gen_com.quizlet.quizletandroid.json  gen_com.quizlet.quizletandroid_no_desc.json  gen_com.spotify.music.json  gen_com.spotify.music_no_desc.json
(+39 files in other folders)
